--- a/assignments/assignment1/src/index.html
+++ b/assignments/assignment1/src/index.html
@@ -6,12 +6,7 @@
     <title>Purifying</title>
 </head>
 <body>
-    <form action="" class="input-form">
-        <input type="text"  name="name">
-        <input type="text"  name="message">
-        <input type="text"  name="cserfToken">
-        <button class="btn">submit</button>
-    </form>
-    <script type="module" src="../dist/HandleInput.js"></script>
+   
+    <script type="module" src="../dist/index2.js"></script>
 </body>
 </html>
